--- a/spec/core/1.0.md
+++ b/spec/core/1.0.md
@@ -67,24 +67,23 @@ A response SHALL NOT be sent.
 - Directionality: against the current (for properties published by the producer side of the terminal), with the current (for properties published by the consumer side of the terminal)
 - Number of arguments: one
 
-A client sends a `core1.sub` message to establish a **subscription** to the property.
+A client sends a `core1.sub` message to establish a **subscription** to a property.
 The argument SHALL be the name of that property.
-
-*Rationale:* It is intentional that subscribing to a property is the only way to retrieve a property's value.
-This design nudges implementors towards handling changes to properties properly.
-
 A `core1.sub` message is semantically invalid if its argument is not the name of a property.
 
 Upon receiving a valid `core1.sub` message, the terminal MUST record a subscription to the specified property, and immediately notify the sender of the property's current value with a corresponding `core1.pub` response (see below).
 Further `core1.pub` responses SHALL be generated whenever the property's value changes.
 
+*Rationale:* It is intentional that subscribing to a property is the only way to retrieve a property's value.
+This design nudges implementors towards handling changes to properties properly.
+
 ### 3.3. The `core1.pub` message
 
-- Role: response (answers `core1.pub` and `core1.set`)
+- Role: response (answers `core1.sub` and `core1.set`)
 - Directionality: with the current (for properties published by the producer side of the terminal), against the current (for properties published by the consumer side of the terminal)
 - Number of arguments: two
 
-A terminal sends a `core1.pub` message in response to a `core1.pub` or `core1.set` message.
+A terminal sends a `core1.pub` message in response to a `core1.sub` or `core1.set` message.
 The first argument SHALL be the name of a property.
 The second argument SHALL be the value of that property.
 
@@ -102,9 +101,9 @@ A `core1.pub` message is semantically invalid if:
 A client can send a `core1.set` message to the terminal to request that the value of a property be changed.
 The argument list of a `core1.set` message has the same form as that of a `core1.pub` message (a pair of property name and value).
 
-A `core1.set` message is semantically invalid if its argument is not the name of a property.
+A `core1.set` message is semantically invalid if its first argument is not the name of a property.
 
-The message is *not* semantically invalid if the second argument is a value that is not permissible for the property in question, and the message is otherwise semantically valid.
+The message is *not* semantically invalid if the second argument is a value that is not permissible for the property in question, and the rest of the message is semantically valid.
 
 *Rationale:* For non-trivial properties, the client might not have enough information to decide whether a given value is valid.
 
