Fix: Some places on the website still reference the old spec
Also:
- std.md: Servers and clients don't necessarily negotiate modules
  before using them, see section 4 in foundation.
- Update reference to core module. Much of what it used to contain is
  in foundation now. I used the introductory description from the core
  module specification itself.
- Remove reference to term module. It lives in #32

--- a/spec/core/1.0.md
+++ b/spec/core/1.0.md
@@ -34,7 +34,7 @@ sign = "+" / "-"
 When a property is said to **accept integer values**, this means that the set of acceptable values for this property is the set of all byte strings whose value matches the `<integer>` grammar element defined above.
 Analogously, when a property is said to **accept unsigned integer values**, this means that the set of acceptable values for this property is the set of all byte strings whose value matches the `<unsigned-integer>` grammar element defined above.
 
-In both these cases, the **numerical value** of each such byte string is the decimal value of the sequence of digits in the byte string's value.
+In both these cases, the **numerical value** of each such byte string is the decimal value of the sequence of digits in the byte string's value, possibly negated by a sign.
 The module specification defining the property may impose additional restrictions on the numerical value of the property.
 
 Module specifications which use some or all of the property types defined in this section SHALL reference this section.
